@@ -1,4 +1,8 @@
-﻿shmuel 17.11.2015 14:41:37 +0200 - build 4457
+﻿drkns 21.11.2015 02:26:19 +0200 - build 4458
+
+1. В некотрых случаях при выделении слов в редакторе кликами мыши могло получаться несколько выделенных блоков.
+
+shmuel 17.11.2015 14:41:37 +0200 - build 4457
 
 1. Функция FSF.FarInputRecordToName при некоторых значениях своего первого аргумента могла
    не возвращаться, покуда не поступит ввод от консоли.
